k8s/istio/circuitbreaking/NormalService2K8S/customer-normal-circuitbreaking-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: normal-service-customer-svc-cb-dr 
spec:
  host: normal-service-customer-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 3
      http:
        http1MaxPendingRequests: 5
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 2
      interval: 3s
      baseEjectionTime: 5m
      maxEjectionPercent: 100
      minHealthPercent: 25
