k8s/istio/circuitbreaking/NormalService2K8S/customer-normal-vs-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: normal-service-customer-svc-route-timeout
spec:
  hosts:
  - normal-service-customer-svc
  http:
    - timeout: 1s
      route:
        - destination:
            host: normal-service-customer-svc
            subset: v1
