k8s/istio/circuitbreaking/NormalService2K8S/provider-normal-fault-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: normal-service-provider-svc-fault-delay
spec:
  hosts:
  - normal-service-provider-svc
  http:
  - fault:
      delay:
        fixedDelay: 4s
        percent: 100
    route:
    - destination:
        host: normal-service-provider-svc
        subset: v1
